# gemgym

./: CHANGELOG.md  DECISIONS.md  PROJECT_TASKS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx
src-python/: main.py  requirements.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  hardware.rs  license.rs  members.rs  mod.rs  payments.rs  plans.rs  rfids.rs  subscriptions.rs  users.rs
src-tauri/src/services/: crypto.rs  database.rs  mod.rs  seed.rs
src/app/: providers.tsx  router.tsx
src/components/layout/: Navbar.tsx  Sidebar.tsx
src/components/routing/: ProtectedRoute.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ComingSoon.tsx  DataTable.tsx  Dialog.tsx  Input.tsx  Spinner.tsx  index.ts
src/database/: schema.ts
src/features/auth/context/: AuthContext.tsx
src/features/auth/pages/: LoginPage.tsx  RolesPage.tsx  UsersPage.tsx
src/features/auth/services/: users.service.ts
src/features/auth/validation/: schemas.ts
src/features/dashboard/pages/: DashboardPage.tsx
src/features/hardware/components/: FaceRegistrationDialog.tsx
src/features/hardware/pages/: FaceRfidPage.tsx  LicensePage.tsx
src/features/members/pages/: MembersPage.tsx
src/features/subscriptions/pages/: PaymentsPage.tsx  PlansPage.tsx  (+1 more)
src/hooks/: usePermissions.ts
src/layouts/: AuthLayout.tsx  DashboardLayout.tsx
src/lib/: query-client.ts  tauri.ts  utils.ts
src/pages/: NotFound.tsx
src/types/: index.ts
