[package]
name = "gemgym"
version = "0.1.0"
description = "GemGym - Offline-First Gym Management System"
authors = ["GemGym Team"]
edition = "2021"

[lib]
name = "gemgym_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database - SQLite with bundled libsqlite3
rusqlite = { version = "0.31", features = ["bundled"] }

# Security - Password hashing
argon2 = "0.5"

# Security - Symmetric encryption (AES-256-GCM)
aes-gcm = "0.10"

# Security - Random number generation
rand = "0.8"

# Encoding utilities
hex = "0.4"
base64 = { version = "0.21", features = ["std"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# System information (for hardware fingerprinting)
sysinfo = "0.30"

# OS-level keychain access
keyring = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"
